update _config.yml to point to direct url

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -32,6 +32,9 @@
                     {% if site.author.facebook_username %}
                     <li><a href="https://www.facebook.com/{{ site.author.facebook_username }}" target="blank"><i class="fa fa-facebook"></i></a></li>
                     {% endif %}
+                    {% if site.author.medium_username %}
+                    <li><a href="https://www.medium.com/@{{ site.author.medium_username }}" target="blank"><i class="fa fa-medium"></i></a></li>
+                    {% endif %}
                     {% if site.author.twitter_username %}
                     <li><a href="https://twitter.com/{{ site.author.twitter_username }}" target="blank"><i class="fa fa-twitter"></i></a></li>
                     {% endif %}
