--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <!-- Set background for slide in css -->
-            <div class="header-back" style="background-image: url({{ "/static/assets/img/"  | prepend: site.baseurl }}{{ banner.src }});" title="{{ banner.title }}"></div>
+            <div class="header-back" style="background-image: url({{ "/static/assets/img/"  | prepend: site.baseurl }}{{ banner.src }}); background-size: 100% 500px;" title="{{ banner.title }};"></div>
         </div>
         {% endfor %}
 
