--- a/_includes/category.html
+++ b/_includes/category.html
@@ -33,32 +33,61 @@ $(function(){
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="ibox">
                         <div class="ibox-content">
-                            <a href="{{ post.url | prepend: site.baseurl }}" class="btn-link">
-                                <h2>{{ post.title }}</h2>
-                            </a>
-                            <div class="small m-b-xs">
-                                <strong>{{ site.author.name }}</strong> <span class="text-muted"><i class="fa fa-clock-o"></i> {{ post.date | date: "%-d %b %Y" }}</span>
-                            </div>
-                            <p>
-                                {{ post.content | strip_html | truncate:100 }}
-                            </p>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <h5 style="display: inline;">Tags:</h5>
-                                    {% for tag in post.tags %}
-                                    <button class="btn btn-white btn-xs">{{ tag }}</button>
-                                    {% endfor %}
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="small text-right">
-                                        <div>
-                                            {% if site.disqus %}
-                                            <i class="fa fa-comments-o"> </i> <span class="disqus-comment-count" data-disqus-url="{{ site.url }}{{ post.url }}">0</span> comments
-                                            {% endif %}
-                                        </div>
+                          {% if post.is_medium %}
+                          <div class="row">
+                            <div class="col-md-10">
+                              <div class="vote-actions">
+                              </div>
+                              <a href="{{ post.medium_url }}" class="vote-title">
+                                  {{ post.title }}
+                              </a>
+                              <div class="vote-info">
+                              {% if site.disqus %}
+                                  <i class="fa fa-comments-o"> </i> <a>Comments (<span class="disqus-comment-count" data-disqus-url="{{ site.url }}{{ post.url }}">0</span>)</a>
+                              {% endif %}
+                                  <i class="fa fa-clock-o"></i> <a>{{ post.date | date: "%-d %b %Y" }}</a>
+                                  <i class="fa fa-user"></i> <a>{{ site.author.name }}</a>
+                                  <i class="fa fa-pencil"></i><a> Medium Post</a>
+                                  <div class="row">
+                                      <div class="col-md-6">
+                                          <h5 style="display: inline;">Tags:</h5>
+                                          {% for tag in post.tags %}
+                                          <button class="btn btn-white btn-xs">{{ tag }}</button>
+                                          {% endfor %}
+                                      </div>
                                     </div>
+                              </div>
+
+                            </div>
+                            <div class="col-md-2 ">
+                                <div class="vote-icon">
+                                    {% if post.icon %}<i class="fa {{ post.icon }}"> </i>{% endif %}
                                 </div>
                             </div>
+                          </div>
+                          {% else %}
+                          <div class="row">
+                              <div class="col-md-10">
+                                  <div class="vote-actions">
+                                  </div>
+                                  <a href="{{ post.url | prepend: site.baseurl }}" class="vote-title">
+                                      {{ post.title }}
+                                  </a>
+                                  <div class="vote-info">
+                                  {% if site.disqus %}
+                                      <i class="fa fa-comments-o"> </i> <a>Comments (<span class="disqus-comment-count" data-disqus-url="{{ site.url }}{{ post.url }}">0</span>)</a>
+                                  {% endif %}
+                                      <i class="fa fa-clock-o"></i> <a>{{ post.date | date: "%-d %b %Y" }}</a>
+                                      <i class="fa fa-user"></i> <a>{{ site.author.name }}</a>
+                                  </div>
+                              </div>
+                              <div class="col-md-2 ">
+                                  <div class="vote-icon">
+                                      {% if post.icon %}<i class="fa {{ post.icon }}"> </i>{% endif %}
+                                  </div>
+                              </div>
+                          </div>
+                          {% endif %}
                         </div>
                     </div>
                 </div>
