--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2651,7 +2651,9 @@ body {
     padding-top: 80px;
     padding-bottom: 90px;
     background-color: #3385FF;
-    background-image: url(../assets/img/landing/avatar_all.png);
+    background-image: url(../assets/img/landing/poly_train.gif);
+    background-size: 100% 400px;
+    background-repeat: no-repeat;
   }
   .contact {
     background-image: url(../assets/img/landing/word_map.png);
