make 'blog' header tab blue to differentiate functionality from other header tabs

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1870,6 +1870,10 @@ ul.clear-list:first-child {
   color: #c1c3c4;
 }
 
+#blog {
+  color: #3385FF;
+}
+
 .blog {
   .btn, h5 {
     margin: 0 0 5px;
