scrap carousel header for simpler setup

--- a/_includes/blog_header.html
+++ b/_includes/blog_header.html
@@ -41,6 +41,8 @@
         </div>
     </nav>
 </div>
-{% if site.blog_carousel %}
+{% if site.index_carousel %}
 {% include carousel.html %}
+{% else %}
+{% include no_carousel.html %}
 {% endif %}
