add link to GitHub in projects section

--- a/_includes/sections/projects.html
+++ b/_includes/sections/projects.html
@@ -40,5 +40,11 @@
           </div>
       {% endfor %}
     </div>
+    <div class = "row">
+      <div class="col-sm-6 wow col-sm-offset-3 zoomIn team-member">
+        &emsp;&emsp;
+        <h4> Check out more of my projects on <a href = "https://github.com/{{site.author.github_username}}" target = "blank"><button class = "btn"> GitHub <i class="fa fa-github"></i></button></a> </h4>
+      </div>
+    </div>
 </div>
 <br>
