--- a/_includes/sections/skills.html
+++ b/_includes/sections/skills.html
@@ -6,61 +6,26 @@
         </div>
     </div>
     <div class="row features-block">
-        <div class="wow zoomIn col-lg-6 col-lg-offset-3">
-            <canvas id="{{ site.data.index.skills.id }}" height="500" width="500"></canvas>
-        </div>
         <div class="col-lg-1"></div>
+        <script
+          src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js">
+        </script>
+
+        <!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
+        <link
+          rel="stylesheet"
+          href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.css"
+        />
+
+        <!-- Prepare a container for your calendar. -->
+        <div class="calendar">
+            <!-- Loading stuff -->
+            Loading the data just for {{site.data.index.skills.github_user}}
+        </div>
+
         <script>
-          var GitHubStats = require("github-stats");
-          var stats = new GitHubStats({
-
-              // Enable light theme for calendar
-              theme: "LIGHT"
-
-              // Provide the repository and the username
-            , repo: "hubber-memory-game"
-            , user: "alysonla"
-
-              // Visualize repository, user and calendar stats
-            , s_repo: true
-            , s_user: true
-            , cal: true
-
-              // A token could help to visualize private stats
-            , token: "an optional token"
-          });
-          // console.log("Hello!");
-          // Stringify everything
-          stats.toString(function (err, output, warns) {
-              console.log(err || output);
-          });
-        // var ctx = document.getElementById("{{ site.data.index.skills.id }}");
-        // var data = {
-        //     labels: "{{ site.data.index.skills.aspects }}".split(","),
-        //     datasets: [{
-        //         label: "{{ site.data.index.skills.label }}",
-        //         backgroundColor: "rgba(179,181,198,0.2)",
-        //         borderColor: "#3385FF",
-        //         pointBackgroundColor: "#3385FF",
-        //         pointBorderColor: "#fff",
-        //         pointHoverBackgroundColor: "#3385FF",
-        //         pointHoverBorderColor: "#3385FF",
-        //         data: [{{ site.data.index.skills.percentage }}]
-        //         }]
-        // };
-        // var myRadarChart = new Chart(ctx, {
-        //     type: 'radar',
-        //     data: data,
-        //     options: {
-        //         scale: {
-        //             responsive: true,
-        //             ticks: {min: 0, max: 100},
-        //             lineArc: false,
-        //             pointLabels: {fontSize: 14},
-        //         },
-        //         legend: {display: false},
-        //     }
-        // });
+            new GitHubCalendar(".calendar", "alescontrela");
         </script>
     </div>
+    <div class="row features-block"></div>
 </div>
