--- a/_includes/sections/skills.html
+++ b/_includes/sections/skills.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-lg-12 text-center" id="i18_skills">
             <div class="navy-line"></div>
-            <h1><span data-i18n="skills.my_skills">My Skills</span></h1>
+            <h1><span data-i18n="skills.my_skills">What I'm Up To</span></h1>
         </div>
     </div>
     <div class="row features-block">
@@ -11,11 +11,160 @@
           src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js">
         </script>
 
-        <!-- Optionally, include the theme (if you don't want to struggle to write the CSS) -->
-        <link
-          rel="stylesheet"
-          href="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.css"
-        />
+        <style>
+          .calendar {
+
+              font-family: Helvetica, arial;
+              border: 1px solid #DDDDDD;
+              border-radius: 3px;
+              min-height: 243px;
+              text-align: center;
+              margin: 0 auto;
+              max-width: 80%;
+          }
+
+          .calendar-graph text.wday,
+          .calendar-graph text.month {
+              font-size: 10px;
+              fill: #aaa;
+              max-width: 80%;
+          }
+
+          .contrib-legend {
+              text-align: right;
+              padding: 0 14px 10px 0;
+              display: inline-block;
+              float: right;
+              max-width: 80%;
+          }
+
+          .contrib-legend .legend {
+              display: inline-block;
+              list-style: none;
+              margin: 0 5px;
+              position: relative;
+              bottom: -1px;
+              padding: 0;
+              max-width: 80%;
+          }
+
+          .contrib-legend .legend li {
+              display: inline-block;
+              width: 10px;
+              height: 10px;
+              max-width: 80%;
+          }
+
+          .text-small {
+              font-size: 12px;
+              color: #767676;
+              max-width: 80%;
+          }
+
+          .calendar-graph {
+              padding: 5px 0 0;
+              height: 126px;
+              text-align: center;
+              max-width: 80%;
+          }
+
+          .contrib-column {
+              padding: 15px 0;
+              text-align: center;
+              border-left: 1px solid #ddd;
+              border-top: 1px solid #ddd;
+              font-size: 11px;
+              max-width: 80%;
+          }
+
+          .contrib-column-first {
+              border-left: 0;
+              max-width: 80%;
+          }
+
+          .table-column {
+              display: table-cell;
+              width: 1%;
+              padding-right: 10px;
+              padding-left: 10px;
+              vertical-align: top;
+              max-width: 80%;
+          }
+
+          .contrib-number {
+              font-weight: 300;
+              line-height: 1.3em;
+              font-size: 24px;
+              display: block;
+              color: #333;
+              max-width: 80%;
+          }
+
+          .calendar img.spinner {
+              width: 70px;
+              margin-top: 50px;
+              min-height: 70px;
+              max-width: 80%;
+          }
+
+          .monospace {
+              text-align: center;
+              color: #000;
+              font-family: monospace;
+              max-width: 80%;
+          }
+
+          .monospace a {
+              color: #1D75AB;
+              text-decoration: none;
+              max-width: 80%;
+          }
+
+          .contrib-footer {
+              font-size: 11px;
+              padding: 0 10px 12px;
+              text-align: left;
+              width: 100%;
+              box-sizing: border-box;
+              height: 26px;
+              max-width: 80%;
+          }
+
+          .left.text-muted {
+              float: left;
+              margin-left: 9px;
+              color: #767676;
+              max-width: 80%;
+          }
+          .left.text-muted a {
+              color: #4078c0;
+              text-decoration: none;
+              max-width: 80%;
+          }
+          .left.text-muted a:hover,
+          .monospace a:hover {
+              text-decoration: underline;
+              max-width: 80%;
+          }
+
+          h2.f4.text-normal.mb-3 {
+              display: none;
+              max-width: 80%;
+          }
+
+          .js-calendar-graph-svg {
+            max-width: 120%
+          }
+
+          .float-left.text-gray {
+              float: left;
+              max-width: 80%;
+          }
+          #user-activity-overview{
+              display:none;
+          }
+        </style>
+
 
         <!-- Prepare a container for your calendar. -->
         <div class="col-lg-10 col-sm-12">
