--- a/_includes/sections/skills.html
+++ b/_includes/sections/skills.html
@@ -1,183 +1,45 @@
-<div class="container">
-    <div class="row">
-        <div class="col-lg-12 text-center" id="i18_skills">
-            <div class="navy-line"></div>
-            <h1><span data-i18n="skills.my_skills">What I'm Up To</span></h1>
+<div id="inSlider" class="carousel carousel-fade" data-ride="carousel" data-interval="false" style="height: 700px !important;">
+    <ol class="carousel-indicators">
+        <li data-target="#inSlider" data-slide-to="0" class="active"></li>
+        <li data-target="#inSlider" data-slide-to="1"></li>
+        <li data-target="#inSlider" data-slide-to="2"></li>
+        <li data-target="#inSlider" data-slide-to="3"></li>
+        <li data-target="#inSlider" data-slide-to="4"></li>
+    </ol>
+    <div class="carousel-inner" role="listbox">
+        <div class="item active"
+        style="background: linear-gradient(to right, #{{site.data.index.video_carousel[0].background_color1}}, #{{site.data.index.video_carousel[0].background_color2}}); height: 700px !important;">
+            <div class="carousel-caption">
+                <h1>{{ site.data.index.video_carousel[0].title }}</h1>
+                <h3>{{ site.data.index.video_carousel[0].description }}</h3>
+            </div>
+            <!-- Set background for slide in css -->
+
+            <div class="header-back" style="text-align: center; vertical-align: middle;">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/{{site.data.index.video_carousel[0].video_id}}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </div>
+
+        {% for banner in site.data.index.video_carousel offset:1 %}
+        <div class="item" style="background: linear-gradient(to right, #{{ banner.background_color1 }}, #{{ banner.background_color2 }}); height: 700px !important;">
+            <div class="carousel-caption">
+                <h1>{{ banner.title }}</h1>
+                <h3>{{ banner.description }}</h3>
+            </div>
+  
+            <div class="header-back" style="text-align: center; vertical-align: middle;">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/{{banner.video_id}}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
+        {% endfor %}
+
     </div>
-    <div class="row features-block">
-        <div class="col-lg-1 col-sm-0"></div>
-        <script
-          src="https://cdn.rawgit.com/IonicaBizau/github-calendar/gh-pages/dist/github-calendar.min.js">
-        </script>
-
-        <style>
-          .calendar {
-
-              font-family: Helvetica, arial;
-              border: 1px solid #DDDDDD;
-              border-radius: 3px;
-              min-height: 243px;
-              text-align: center;
-              margin: 0 auto;
-              max-width: 80%;
-          }
-
-          .calendar-graph text.wday,
-          .calendar-graph text.month {
-              font-size: 10px;
-              fill: #aaa;
-              max-width: 80%;
-          }
-
-          .contrib-legend {
-              text-align: right;
-              padding: 0 14px 10px 0;
-              display: inline-block;
-              float: right;
-              max-width: 80%;
-          }
-
-          .contrib-legend .legend {
-              display: inline-block;
-              list-style: none;
-              margin: 0 5px;
-              position: relative;
-              bottom: -1px;
-              padding: 0;
-              max-width: 80%;
-          }
-
-          .contrib-legend .legend li {
-              display: inline-block;
-              width: 10px;
-              height: 10px;
-              max-width: 80%;
-          }
-
-          .text-small {
-              font-size: 12px;
-              color: #767676;
-              max-width: 80%;
-          }
-
-          .calendar-graph {
-              padding: 5px 0 0;
-              height: 126px;
-              text-align: center;
-              max-width: 80%;
-          }
-
-          .contrib-column {
-              padding: 15px 0;
-              text-align: center;
-              border-left: 1px solid #ddd;
-              border-top: 1px solid #ddd;
-              font-size: 11px;
-              max-width: 80%;
-          }
-
-          .contrib-column-first {
-              border-left: 0;
-              max-width: 80%;
-          }
-
-          .table-column {
-              display: table-cell;
-              width: 1%;
-              padding-right: 10px;
-              padding-left: 10px;
-              vertical-align: top;
-              max-width: 80%;
-          }
-
-          .contrib-number {
-              font-weight: 300;
-              line-height: 1.3em;
-              font-size: 24px;
-              display: block;
-              color: #333;
-              max-width: 80%;
-          }
-
-          .calendar img.spinner {
-              width: 70px;
-              margin-top: 50px;
-              min-height: 70px;
-              max-width: 80%;
-          }
-
-          .monospace {
-              text-align: center;
-              color: #000;
-              font-family: monospace;
-              max-width: 80%;
-          }
-
-          .monospace a {
-              color: #1D75AB;
-              text-decoration: none;
-              max-width: 80%;
-          }
-
-          .contrib-footer {
-              font-size: 11px;
-              padding: 0 10px 12px;
-              text-align: left;
-              width: 100%;
-              box-sizing: border-box;
-              height: 26px;
-              max-width: 80%;
-          }
-
-          .left.text-muted {
-              float: left;
-              margin-left: 9px;
-              color: #767676;
-              max-width: 80%;
-          }
-          .left.text-muted a {
-              color: #4078c0;
-              text-decoration: none;
-              max-width: 80%;
-          }
-          .left.text-muted a:hover,
-          .monospace a:hover {
-              text-decoration: underline;
-              max-width: 80%;
-          }
-
-          h2.f4.text-normal.mb-3 {
-              display: none;
-              max-width: 80%;
-          }
-
-          .js-calendar-graph-svg {
-            max-width: 120%
-          }
-
-          .float-left.text-gray {
-              float: left;
-              max-width: 80%;
-          }
-          #user-activity-overview{
-              display:none;
-          }
-        </style>
-
-
-        <!-- Prepare a container for your calendar. -->
-        <div class="col-lg-10 col-sm-12">
-        <div class="calendar">
-            <!-- Loading stuff -->
-            Loading data for {{site.data.index.skills.github_user}}
-        </div>
-        </div>
-
-        <script>
-            new GitHubCalendar(".calendar", "alescontrela");
-        </script>
-        <div class="col-lg-1 col-sm-0"></div>
-    </div>
-    <div class="row features-block"></div>
+    <a class="left carousel-control" href="#inSlider" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#inSlider" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
