--- a/_includes/blog_header.html
+++ b/_includes/blog_header.html
@@ -41,8 +41,8 @@
         </div>
     </nav>
 </div>
-{% if site.index_carousel %}
+<!-- {% if site.index_carousel %}
 {% include carousel.html %}
 {% else %}
 {% include no_carousel.html %}
-{% endif %}
+{% endif %} -->
