--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,14 +1,14 @@
-<div id="inSlider" class="carousel carousel-fade" data-ride="carousel">
+<div id="inSlider" class="carousel carousel-fade" data-ride="carousel" data-interval="60000">
     <ol class="carousel-indicators">
         <li data-target="#inSlider" data-slide-to="0" class="active"></li>
         <li data-target="#inSlider" data-slide-to="1"></li>
+        <li data-target="#inSlider" data-slide-to="2"></li>
+        <li data-target="#inSlider" data-slide-to="3"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
 
         <div class="item active">
             <div class="container">
-                <div class="carousel-caption">
-                </div>
                 <div class="carousel-image wow zoomIn">
                     <!-- <img src="static/img/landing/laptop.png" alt="laptop"/> -->
                 </div>
@@ -18,20 +18,30 @@
             class="header-back"
             style="background-image: url({{ '/static/assets/img/' | prepend: site.baseurl }}{{ site.data.index.banners[0].src }});"
             title="{{ site.data.index.banners[0].title }}">
+                <video src="{{ site.baseurl }}/static/assets/img/{{ site.data.index.banners[0].src }}" muted autoplay loop style="width:100%;height:100%;object-fit: fill;"></video>
+            </div>
+            <div class="carousel-caption">
+                <h2 style="color: {{ site.data.index.banners[0].text_color }};">{{ site.data.index.banners[0].title }}</h2>
+                <h4 style="color: {{ site.data.index.banners[0].text_color }};">{{ site.data.index.banners[0].subtitle }}</h4>
             </div>
         </div>
 
         {% for banner in site.data.index.banners offset:1 %}
         <div class="item">
             <div class="container">
-                <div class="carousel-caption">
-                </div>
                 <div class="carousel-image wow zoomIn">
                     <!-- <img src="static/img/landing/laptop.png" alt="laptop"/> -->
                 </div>
             </div>
             <!-- Set background for slide in css -->
-            <div class="header-back" style="background: url({{ "/static/assets/img/"  | prepend: site.baseurl }}{{ banner.src }}), linear-gradient(#{{ banner.background_color1 }}, #{{ banner.background_color2 }}); background-repeat: no-repeat; background-position: center;" title="{{ banner.title }};"></div>
+            <div class="header-back" style="background-image: url({{ "/static/assets/img/"  | prepend: site.baseurl }}{{ banner.src }});"
+            title="{{ banner.title }}">
+                <video src="{{ site.baseurl }}/static/assets/img/{{ banner.src }}" muted autoplay loop style="width:100%;height:100%;object-fit: fill;"></video>
+            </div>
+            <div class="carousel-caption">
+                <h2 style="color: {{ banner.text_color }};">{{ banner.title }}</h2>
+                <h4 style="color: {{ banner.text_color }};">{{ banner.subtitle }}</h4>
+            </div>
         </div>
         {% endfor %}
 
