--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -20,8 +20,10 @@
         <!-- avatar -->
         <div class="col-xs-4">
             <div class="team-member wow zoomIn">
-                <img src="{{ site.author.avatar | prepend: site.baseurl }}" height="110" width="110" class="img-responsive img-circle" alt="">
-                <h4><span class="navy">{{ site.author.first_name }}</span> {{ site.author.last_name }}</h4>
+                <img src="{{ site.author.avatar | prepend: site.baseurl }}" height="300" width="300" class="img-responsive img-circle" alt="">
+                <h2><span class="navy">{{ site.author.first_name }}</span> {{ site.author.last_name }}</h2>
+                <h3>{{ site.author.job }}</h3>
+                <h3>{{ site.author.job2 }}</h3>
                 <ul class="list-inline social-icon">
                     {% if site.author.github_username %}
                     <li><a href="https://github.com/{{ site.author.github_username }}" target="blank"><i class="fa fa-github"></i></a></li>
