--- a/_includes/sections/skills.html
+++ b/_includes/sections/skills.html
@@ -1,10 +1,10 @@
-<div id="inSlider" class="carousel carousel-fade" data-ride="carousel" data-interval="false" style="height: 700px !important;">
+<div id="inSlider2" class="carousel carousel-fade" data-ride="carousel" data-interval="false" style="height: 700px !important;">
     <ol class="carousel-indicators">
-        <li data-target="#inSlider" data-slide-to="0" class="active"></li>
-        <li data-target="#inSlider" data-slide-to="1"></li>
-        <li data-target="#inSlider" data-slide-to="2"></li>
-        <li data-target="#inSlider" data-slide-to="3"></li>
-        <li data-target="#inSlider" data-slide-to="4"></li>
+        <li data-target="#inSlider2" data-slide-to="0" class="active"></li>
+        <li data-target="#inSlider2" data-slide-to="1"></li>
+        <li data-target="#inSlider2" data-slide-to="2"></li>
+        <li data-target="#inSlider2" data-slide-to="3"></li>
+        <li data-target="#inSlider2" data-slide-to="4"></li>
     </ol>
     <div class="carousel-inner" role="listbox">
         <div class="item active"
@@ -16,7 +16,7 @@
             <!-- Set background for slide in css -->
 
             <div class="header-back" style="text-align: center; vertical-align: middle;">
-                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/{{site.data.index.video_carousel[0].video_id}}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="100%" src="https://www.youtube.com/embed/{{site.data.index.video_carousel[0].video_id}}" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="margin-bottom: 100px;height:100%;"></iframe>
             </div>
         </div>
 
@@ -34,11 +34,11 @@
         {% endfor %}
 
     </div>
-    <a class="left carousel-control" href="#inSlider" role="button" data-slide="prev">
+    <a class="left carousel-control" href="#inSlider2" role="button" data-slide="prev">
         <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
     </a>
-    <a class="right carousel-control" href="#inSlider" role="button" data-slide="next">
+    <a class="right carousel-control" href="#inSlider2" role="button" data-slide="next">
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </a>
